配置不限制的静态资源等